# Google-ADK-Demos

./: .gitignore  main.py  pyproject.toml
bq_agent/: __init__.py  agent.py
bq_data_analysis_agent (defunct)/: README.md  pyproject.toml
bq_data_analysis_agent (defunct)/data_analysis_agent/: agent.py  prompt.py  tools.py
build-agent-adk-toolbox-cloudsql/: Procfile  README.md  agent.py  main.py  pyproject.toml
build-agent-adk-toolbox-cloudsql/deploy-toolbox/: .dockerignore  Dockerfile  tools.yaml
build-agent-adk-toolbox-cloudsql/restaurant_agent/: .dockerignore  Dockerfile  agent.py
build-agent-adk-toolbox-cloudsql/scripts/: setup_database.sh  setup_restaurant_db.py  setup_verify_trial_project.sh  verify_database.py
build-agents-with-rag/: README.md  main.py  pyproject.toml
data_analysis_agent/: pyproject.toml  requirements.txt
data_analysis_agent/data_analysis_agent/: agent.py  prompt.py  tools.py
data_analysis_agent/data_analyst_agent/: agent.py
deploy-adk-agents-to-cloudrun/: README.md
deploy-adk-agents-to-cloudrun/zoo_guide_agent/: agent.py  pyproject.toml  requirements.txt
simple_bq_agent/: pyproject.toml
simple_bq_agent/bq_agent/: tools.py
