[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-adk>=2.1.0",
    "google-cloud>=0.34.0",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-dataplex>=2.19.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "rich>=15.0.0",
]
