[project]
name = "build-agent-adk-toolbox-cloudsql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloud-sql-python-connector[pg8000]>=1.20.3",
    "google-adk>=2.3.0",
    "mcp>=1.28.0",
    "python-dotenv>=1.2.2",
]
