[project]
name = "build-agent-adk-toolbox-cloudsql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloud-sql-python-connector[pg8000]>=1.20.3",
    "google-adk==1.29.0",
    "jq>=1.11.0",
    "mcp>=1.28.0",
    "python-dotenv>=1.2.2",
    "toolbox-adk==1.0.0",
]
