[project]
name = "bq-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=2.1.0",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-dataplex>=2.19.0",
    "google-auth>=2.0.0",
    "vertexai>=1.71.1",
]
